# swisswatch

./: .gitignore  ChangeLog  Hand.c  HandOrMark.c  Makefile.am  Makefile.simple  Mark.c  README  README.md  SWatch-co.ad  SWatch.ad  SwissWatch.c  TableConvert.c  configure.ac  org.debian.swisswatch.desktop  swisswatch.c  swisswatch.desktop  swisswatch.gresource.xml  swisswatch.h2m  swisswatch.man
debian/: .gitignore  changelog  conffiles  control  copyright  install  manpages  menu  postinst  prerm  rules  swisswatch.preinst  swisswatch.xpm  watch
debian/patches/: 0001-adjust-ad-files.patch  0001-adjust-ad.patch  0002-include-headers.patch  0003-makefile.patch  0004-manpage-designs.patch  0004-manpage.patch  0005-spelling.patch  0006-manpage-linebreak.patch  0007-Der-Mouse.patch  0008-autotoolize.patch  adjust-ad.patch  fix-header.patch  fix-makefile.patch  fix-manpage.patch  series
